Changes in 0.5.2-CVS
==============================================================================
- 1813968 wbemsmt-webapp: utils for managing open ports

Changes in 0.5.2-1
==============================================================================
- 1793932 wbemsmt-webapp: noborder stylesheet class for main.css
- 1784067 wbemsmt-webapp: rework admin panels

Changes in 0.5.1-1 :
==============================================================================
- 1780048  wbemsmt-webapp: add protocol to login settings
- 1775196  wbemsmt-webapp: confugurable namespace for embed login
- 1775191  wbemsmt-webapp: stop ajax requests before a page request
- 1774772  wbemsmt-webapp: remove application namespace
- 1773221  wbemsmt-webapp: add configurable properties to tasks
- 1768402  wbemsmt-webapp: remove dummy-config for not-configured task

Changes in 0.5.0-1 :
==============================================================================
- 1756335  wbemsmt-webapp: synchronize concurrent ajax requests
- 1754931  wbemsmt-webapp: Upgrade to build environment
- 1746923  wbemsmt-webapp: docu for slp config/usage
- 1746585  wbemsmt-admin: namespace for application
- 1740803  wbemsmt-slp: use treeconfig to check for slp hosts
- 1737773  wbemsmt-jsf: Save Data at login
- 1737049  wbemsmt-jsf: parallel logon for multiple hosts
- 1731237  wbemsmt-jsf: store updateInterval in Cookies
- 1731236  wbemsmt-jsf: childrenTables as HtmlDataTable
- 1728152  wbemsmt-common: priority for eventlisteners
- 1727285  wbemsmt-jsf: configurable ajax update interval
- 1728151  wbemsmt-jsf: scrollable childTables
- 1724637  wbemsmt-common: InstanceNaming based in FCO
- 1724664  wbemsmt-jsf: fixed with for tabs in tabbedPanel
- 1724636  wbemsmt-common: add Session objec
- 1707399  wbemsmt: change file encoding to utf8
- 1704409  wbemsmt:dynamically build tree node by the usage of a class
- 1674057  wbemsmt: update to sblim-cimclient-1.3.2
- 1671504  wbemsmt-webapp: update to myfaces-core-1.1.5