@@ -1,5 +1,6 @@
 Changes in 0.5.2-CVS
 ==============================================================================
+- 1813970 wbemsmt-webapp: update the tree if requested from BL
 - 1813968 wbemsmt-webapp: utils for managing open ports
 
 Changes in 0.5.2-1
